--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,6 @@
-body {
-  background: orange;
+@import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@300;400;500;600;700&display=swap');
+
+
+h2 {
+  font-family: 'Comfortaa', cursive;
 }
