--- a/styles.css
+++ b/styles.css
@@ -21,6 +21,12 @@
   margin-left: 7rem;
 }
 
-
-
-
+.hi {
+  display: none;
+  height: 50rem;
+  border: none;
+  width: 190rem;
+  align-items: center;
+  text-align: center;
+  padding-left: 25rem;
+}
