--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@
   text-align: center;
 }
 
-#main-content {
+#home-content {
   font-family: 'Comfortaa', cursive;
   text-align: center;
 }
@@ -21,7 +21,7 @@
   margin-left: 7rem;
 }
 
-.hi {
+.irr-content {
   display: none;
   height: 50rem;
   border: none;
